--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
+    <header class="cabecalho">
       <img src="./assets/img/logo_ricardo.png" alt="" />
       <nav>
         <a>HOME</a>
@@ -50,6 +50,33 @@
         <p>❤️sou apaixonado por jogos e sou um apreciador de filmes e series</p>
         <p>😊e também amo jogar vôlei</p>
       </article>
+    </section>
+    <section class="contatos">
+      <div class="botoess">
+        <button><a href="https://github.com/RicardoLDS09141">Github</Github></a></button>
+        <button><a href=""></a>Facebook</button>
+        <button><a href=""></a>Instagram</button>
+        <button><a href=""></a>WhatsApp</button>
+      </div> 
+      <section>
+        <header>
+          <h1>CONTATOS</h1>
+          <p>Caso queira entrar em contato, preencha o formulario abaixo:</p>
+        </header>
+        <form>
+          <input type="text" placeholder="Nome completo:">
+          <input type="text" placeholder="Endereço de Email:">
+          <input type="text" placeholder="Telefone DDD:">
+          <input type="text" placeholder="Assunto:">
+        </form>
+      </section>
+      
+    
+
+
+
+
+
     </section>
   </body>
 </html>
